--- a/skin/adminhtml/default/default/bl/customgrid/styles.css
+++ b/skin/adminhtml/default/default/bl/customgrid/styles.css
@@ -15,22 +15,48 @@
 .blcg-clearer { clear:both; }
 .blcg-tooltip { padding:4px 8px; background:#fff; border:1px solid #000; }
 .blcg-no-display { display:none !important; }
-.blcg-loading { width:100%; height:100%; background:url(images/loader.gif) no-repeat 50% 50%; box-sizing:border-box; -moz-box-sizing:border-box; -webkit-box-sizing:border-box; }
+.blcg-loading {
+    width:100%;
+    height:100%;
+    background:url(images/loader.gif) no-repeat 50% 50%;
+    box-sizing:border-box;
+    -moz-box-sizing:border-box;
+    -webkit-box-sizing:border-box;
+}
 .blcg-use-config-wrapper { margin-top:3px; }
 .blcg-use-config-wrapper label { margin-left:3px; }
 .blcg-form-note-text { line-height:14px; font-size:11px; }
 .blcg-form-note-text ul { list-style:decimal inside none; }
 .blcg-form-note-text li { margin:0; }
 div.blcg-collapseable { margin-top:1px; }
-div.blcg-collapseable a { display:block; font-weight:bold; background:url(images/collapse_arrow_down.png) 100% 50% no-repeat; color:#fff; text-decoration:none; }
+div.blcg-collapseable a {
+    display:block;
+    font-weight:bold;
+    background:url(images/collapse_arrow_down.png) 100% 50% no-repeat;
+    color:#fff;
+    text-decoration:none;
+}
 div.blcg-collapseable a:hover { color:#fff; text-decoration:none; }
 div.blcg-collapseable a.open { background:url(images/collapse_arrow_up.png) 100% 50% no-repeat; }
 
 /* MESSAGES LIST */
 
-.blcg-messages-wrapper { position:fixed; right:0; bottom:0; width:100%;  z-index:10; pointer-events:none; }
+.blcg-messages-wrapper { position:fixed; right:0; bottom:0; width:100%; z-index:10; pointer-events:none; }
 .blcg-messages-tabs { margin-right:16px; pointer-events:auto; }
-.blcg-messages-tab { float:right; display:block; height:32px; line-height:34px; margin-left:8px; padding:0 10px 0 30px; font-weight:bold; background-repeat:no-repeat; background-position:6px center; border-style:solid; border-width:1px 1px 0; cursor:pointer; }
+.blcg-messages-tab {
+    float:right;
+    display:block;
+    height:32px;
+    line-height:34px;
+    margin-left:8px;
+    padding:0 10px 0 30px;
+    font-weight:bold;
+    background-repeat:no-repeat;
+    background-position:6px center;
+    border-style:solid;
+    border-width:1px 1px 0;
+    cursor:pointer;
+}
 .blcg-messages-lists { clear:both; pointer-events:auto; }
 .blcg-messages-list-wrapper { max-height:200px; overflow-y:auto; border-width:1px 0 0; border-style:solid; }
 .blcg-messages-list { padding:8px 12px; }
@@ -55,89 +81,105 @@ div.blcg-collapseable a.open { background:url(images/collapse_arrow_up.png) 100%
 
 #blcg-context-menu { min-width:190px; background:#fff; border:1px solid #656565; }
 #blcg-context-menu ul { margin:0; padding:0; list-style:none; cursor:pointer; }
-#blcg-context-menu ul li { margin:0; padding:4px 12px 4px 8px; font-size:12px; color:#000; text-align:left; text-decoration:none; cursor:pointer; }
+#blcg-context-menu ul li {
+    margin:0;
+    padding:4px 12px 4px 8px;
+    font-size:12px;
+    color:#000;
+    text-align:left;
+    text-decoration:none;
+    cursor:pointer;
+}
 #blcg-context-menu ul li:hover { background:#fcce77; cursor:pointer; }
 #blcg-context-menu ul li.disabled,
-#blcg-context-menu ul li:hover.disabled { font-size:13px; font-weight:bold; background:#656565; color:#fff; cursor:pointer; }
+#blcg-context-menu ul li:hover.disabled {
+    font-size:13px;
+    font-weight:bold;
+    background:#656565;
+    color:#fff;
+    cursor:pointer;
+}
 
 /* PROFILES BAR */
-.blcg-grid-profiles-bar { width:100%; margin:0 0 12px; border-bottom:1px solid #ccc; display:table;}
+
+.blcg-grid-profiles-bar { width:100%; height:28px; margin:0 0 12px; border-bottom:1px solid #ccc; display:table;}
 .blcg-grid-profiles-bar > div {display:table-cell; vertical-align:bottom;}
 .blcg-grid-profiles-bar-fixed-part { width:1px; }
 .blcg-grid-profiles-list-options {
-    text-align: right;
-
     padding-right:10px;
-    border:  0 solid;
-    border-right-width: 1px;
-    -webkit-border-image: -webkit-gradient(linear, 0 100%, 0 0, from(#ccc), to(transparent)) 1 100%;
-    -webkit-border-image: -webkit-linear-gradient(bottom, #ccc, transparent) 1 100%;
-    -moz-border-image:    -moz-linear-gradient(bottom, #ccc, transparent) 1 100%;
-    -o-border-image:      -o-linear-gradient(bottom, #ccc, transparent) 1 100%;
-    border-image:         linear-gradient(to top, #ccc, transparent) 1 100%;
+    border:0 solid;
+    border-right-width:1px;
+    -webkit-border-image:-webkit-gradient(linear, 0 100%, 0 0, from(#ccc), to(transparent)) 1 100%;
+    -webkit-border-image:-webkit-linear-gradient(bottom, #ccc, transparent) 1 100%;
+    -moz-border-image:   -moz-linear-gradient(bottom, #ccc, transparent) 1 100%;
+    -o-border-image:     -o-linear-gradient(bottom, #ccc, transparent) 1 100%;
+    border-image:        linear-gradient(to top, #ccc, transparent) 1 100%;
+    text-align:right;
 }
+
 /* Buttons */
-.blcg-grid-profiles-bar-buttons {
-    margin:0 0 0 8px;
-    padding-bottom:4px;
-    white-space:nowrap;
-}
-.blcg-grid-profiles-bar-button {
-    margin:0;
-    padding:2px 6px 2px;
-    background:none;
-    border:none;
-    color: #ddd;
-}
-.blcg-grid-profiles-bar-button:hover {
-    background:none;
-    color:#555;
-}
+
+.blcg-grid-profiles-bar-buttons { margin:0 0 0 8px; padding-bottom:4px; white-space:nowrap; }
+.blcg-grid-profiles-bar-button { margin:0; padding:2px 6px 2px; background:none; border:none; color:#ddd; }
+.blcg-grid-profiles-bar-button:hover { background:none; color:#555; }
 .blcg-grid-profiles-bar-button.blcg-on,
 .blcg-grid-profiles-bar-button:active {
-    color: #555;
-    background-image: -webkit-linear-gradient(top, #EBEBEB, #FFFFFF);
-    background-image: -o-linear-gradient(top, #EBEBEB, #FFFFFF);
-    background-image: linear-gradient(to bottom, #EBEBEB, #FFFFFF);
+    color:#555;
+    background-image:-webkit-linear-gradient(top, #ebebeb, #fff);
+    background-image:-o-linear-gradient(top, #ebebeb, #fff);
+    background-image:linear-gradient(to bottom, #ebebeb, #fff);
 }
-.blcg-grid-profiles-bar-button:not(:last-child) { border-right:0 !important; }
 .blcg-grid-profiles-bar-button > span::before {
     display:inline-block;
-    font-family: FontAwesome;
-    font-size: 14px;
     line-height:14px;
-    vertical-align: middle;
+    font-family:FontAwesome;
+    font-size:14px;
+    vertical-align:middle;
 }
-.blcg-grid-profiles-bar-button > span > span {display: none !important;}
+.blcg-grid-profiles-bar-button > span > span {display:none !important;}
 .blcg-grid-profiles-bar-button-columns-list > span::before { content:"\f0db"; }
-.blcg-grid-profiles-bar-button-default-params > span::before { content: "\f1de"; }
+.blcg-grid-profiles-bar-button-default-params > span::before { content:"\f1de"; }
 .blcg-grid-profiles-bar-button-custom-columns > span::before { content:"\f1b3"; }
 .blcg-grid-profiles-bar-button-export > span::before { content:"\f1c3"; }
 .blcg-grid-profiles-bar-button-grid-infos > span::before { content:"\f129"; }
 .blcg-grid-profiles-bar-button-edit-link > span::before { content:"\f08e"; }
 .blcg-grid-profiles-bar-button-rss > span::before { content:"\f09e"; }
-.blcg-grid-profiles-bar-button-copy_new { padding-left: 0; }
-.blcg-grid-profiles-bar-button-copy_new > span::before { content: "\f067"; }
-.blcg-grid-profiles-bar-button-default > span::before { content: "\f08d";}
-.blcg-grid-profiles-bar-button-copy_existing > span::before { content: "\f0c5"; }
-.blcg-grid-profiles-bar-button-edit > span::before { content: "\f040"; }
+.blcg-grid-profiles-bar-button-copy_new { padding-left:0; }
+.blcg-grid-profiles-bar-button-copy_new > span::before { content:"\f067"; }
+.blcg-grid-profiles-bar-button-default > span::before { content:"\f08d";}
+.blcg-grid-profiles-bar-button-copy_existing > span::before { content:"\f0c5"; }
+.blcg-grid-profiles-bar-button-edit > span::before { content:"\f040"; }
 .blcg-grid-profiles-bar-button-assign > span::before { content:"\f023"; }
 .blcg-grid-profiles-bar-button-delete > span::before { content:"\f1f8"; }
 
-
-.blcg-grid-profiles-bar-arrow { width:13px; height:13px; cursor:pointer; background:transparent no-repeat 0 0;  }
+.blcg-grid-profiles-bar-arrow { width:13px; height:13px; background:transparent no-repeat 0 0; cursor:pointer; }
 .blcg-grid-profiles-bar-arrow.blcg-disabled { background-position:0 -13px; }
 .blcg-grid-profiles-bar-arrow-up { float:right; margin:5px 0 0; background-image:url(images/arrow_up.gif); }
 .blcg-grid-profiles-bar-arrow-down { float:right; margin:5px 6px 0 0; background-image:url(images/arrow_down.gif); }
 .blcg-custom-grid-config-switch { float:right; margin-right:6px; text-align:right; }
-.blcg-grid-profiles-list { position:relative; float:left; display: table; border-spacing: 10px 0; }
-.blcg-grid-profiles-list li { display: table-cell; height:26px; line-height:26px; margin:8px 0 0 8px;
-    background:#e2e2e2; border:1px solid #ccc; border-width:1px 1px 0; cursor:pointer; max-width:120px;
+.blcg-grid-profiles-list { position:relative; float:left; display:table; border-spacing:10px 0; }
+.blcg-grid-profiles-list li {
+    display:table-cell;
+    max-width:120px;
+    height:26px;
+    line-height:26px;
+    margin:8px 0 0 8px;
+    background:#e2e2e2;
+    border:1px solid #ccc;
+    border-width:1px 1px 0;
+    cursor:pointer;
 }
 .blcg-grid-profiles-list li.blcg-base { font-style:italic; }
-.blcg-grid-profiles-list li > span {padding:0 10px; display:block; text-overflow: ellipsis; white-space: nowrap; overflow:hidden; }
+.blcg-grid-profiles-list li > span {
+    display:block;
+    padding:0 10px;
+    overflow:hidden;
+    text-overflow:ellipsis;
+    white-space:nowrap;
+}
 .blcg-grid-profiles-list li.blcg-current { max-width:inherit; }
-.blcg-grid-profiles-list li.blcg-current > span { height:27px; margin-bottom:-1px; line-height:27px; background:#fff; }
+.blcg-grid-profiles-list li.blcg-current > span { height:28px; margin-bottom:-1px; line-height:28px; background:#fff; }
+
 /* PINNABLE GRID HEADER */
 
 .blcg-grid-pinned-actions-block { z-index:1; background:#fff; }
@@ -146,7 +188,13 @@ div.blcg-collapseable a.open { background:url(images/collapse_arrow_up.png) 100%
 
 /* IN-GRID / EDIT BLOCK HEADER */
 
-.blcg-content-header { margin-bottom:18px; padding-top:9px; padding-bottom:.25em; font-family:Arial,Helvetica,sans-serif; border-bottom:4px solid #dfdfdf; }
+.blcg-content-header {
+    margin-bottom:18px;
+    padding-top:9px;
+    padding-bottom:.25em;
+    font-family:Arial,Helvetica,sans-serif;
+    border-bottom:4px solid #dfdfdf;
+}
 .blcg-content-header h3 { line-height:1.2em; margin:.3em .5em 0 0; padding:0; font-size:1.25em; color:#eb5e00; }
 
 /* COLUMNS LIST */
@@ -156,7 +204,11 @@ div.blcg-collapseable a.open { background:url(images/collapse_arrow_up.png) 100%
 .blcg-custom-grid-config .grid table tr:hover,
 .blcg-custom-grid-config .grid table tr.blcg-dnd-whileDrag { background-color:#fcf5dd; } 
 .blcg-custom-grid-config .grid table td { vertical-align:middle; }
-.blcg-custom-grid-config .grid table .blcg-drag-handle { padding:0 9px; background:url(images/up-down.gif) no-repeat center center; cursor:move; }
+.blcg-custom-grid-config .grid table .blcg-drag-handle {
+    padding:0 9px;
+    background:url(images/up-down.gif) no-repeat center center;
+    cursor:move;
+}
 .blcg-custom-grid-config .grid table .blcg-store-select { margin:0; }
 
 /* RSS LINKS */
@@ -170,10 +222,19 @@ div.blcg-collapseable a.open { background:url(images/collapse_arrow_up.png) 100%
 .blcg-collection-renderers-help-button,
 .blcg-collection-renderers-config-button,
 .blcg-custom-column-config-button,
-.grid tr.filter .blcg-categories-filter .blcg-filter-button { display:inline-block; width:16px; height:16px; vertical-align:middle; cursor:pointer; zoom:1; }
+.grid tr.filter .blcg-categories-filter .blcg-filter-button {
+    display:inline-block;
+    width:16px;
+    height:16px;
+    vertical-align:middle;
+    cursor:pointer;
+    zoom:1;
+}
 .blcg-collection-renderers-config-button,
 .blcg-custom-column-config-button,
-.grid tr.filter .blcg-categories-filter .blcg-filter-button { background:url(images/ico_config.png) no-repeat center center; }
+.grid tr.filter .blcg-categories-filter .blcg-filter-button {
+    background:url(images/ico_config.png) no-repeat center center;
+}
 .blcg-collection-renderers-help-button { background:url(images/ico_help.png) no-repeat center center; }
 
 /* ADDITIONAL FILTERS */
@@ -184,7 +245,12 @@ div.blcg-collapseable a.open { background:url(images/collapse_arrow_up.png) 100%
 
 .grid table td.blcg-column-editor-editing { padding-right:38px; }
 .grid table td.blcg-column-editor-updated { background:#ebffd4 !important; }
-.grid table td.blcg-column-editor-editing p.note { margin:0; padding:0 0 0 13px; font-size:11px; background:url(images/grid_note_bg.gif) 1px 6px no-repeat; }
+.grid table td.blcg-column-editor-editing p.note {
+    margin:0;
+    padding:0 0 0 13px;
+    font-size:11px;
+    background:url(images/grid_note_bg.gif) 1px 6px no-repeat;
+}
 .grid td.blcg-column-editor-editing input.input-text,
 .grid td.blcg-column-editor-editing select { width:90%; max-width:270px; min-width:110px; }
 .grid td.blcg-column-editor-editing select.multiselect { min-width:150px; }
@@ -194,7 +260,14 @@ div.blcg-collapseable a.open { background:url(images/collapse_arrow_up.png) 100%
 .blcg-column-editor-overlay-edit,
 .blcg-column-editor-overlay-validate,
 .blcg-column-editor-overlay-cancel,
-.blcg-column-editor-overlay-updated { float:left; width:16px; height:16px; background-repeat:no-repeat; background-position:center center; cursor:pointer; }
+.blcg-column-editor-overlay-updated {
+    float:left;
+    width:16px;
+    height:16px;
+    background-repeat:no-repeat;
+    background-position:center center;
+    cursor:pointer;
+}
 .blcg-column-editor-overlay-edit { background-image:url(images/edit.png); }
 .blcg-column-editor-overlay-validate { background-image:url(images/validate.gif); }
 .blcg-column-editor-overlay-cancel { background-image:url(images/cancel.gif); }
@@ -233,9 +306,16 @@ div.blcg-collapseable a.open { background:url(images/collapse_arrow_up.png) 100%
 .blcg-popup-window .top.table_window { background:none; border:none; }
 .dialog.blcg-popup-window .bot { display:table !important; }
 
-.overlay___invisible__ { background-color:#666; filter:alpha(opacity=0); opacity: 0; }
+.overlay___invisible__ { background-color:#666; filter:alpha(opacity=0); opacity:0; }
 .overlay_blcg { background-color:#000; filter:alpha(opacity=60); opacity:0.6; }
-.blcg_wired_frame { position:absolute; display:block; background:#fff; border:1px #000 dashed; filter:alpha(opacity=60); opacity:0.6; }
+.blcg_wired_frame {
+    position:absolute;
+    display:block;
+    background:#fff;
+    border:1px #000 dashed;
+    filter:alpha(opacity=60);
+    opacity:0.6;
+}
 
 .blcg_nw { width:9px; height:28px; background:transparent url(window/top-left.png) no-repeat 0 0; }
 .blcg_n { height:28px; background:transparent url(window/top-middle.png) repeat-x 0 0; }
@@ -249,11 +329,31 @@ div.blcg-collapseable a.open { background:url(images/collapse_arrow_up.png) 100%
 .blcg-resizable-popup-window .blcg_sizer { background-image:url(window/bottom-right.png); cursor:se-resize; }
 .blcg_close,
 .blcg_maximize,
-.blcg_minimize { position:absolute; top:11px; width:15px; height:9px; z-index:1000; background-repeat:no-repeat; background-position:0 0; cursor:pointer; }
+.blcg_minimize {
+    position:absolute;
+    top:11px;
+    width:15px;
+    height:9px;
+    z-index:1000;
+    background-repeat:no-repeat;
+    background-position:0 0;
+    cursor:pointer;
+}
 .blcg_close { right:10px; background-image:url(window/button-close.png); }
 .blcg_maximize { right:25px; background-image:url(window/button-maximize.png); }
 .blcg_minimize { right:40px; background-image:url(window/button-minimize.png); }
-.blcg_title { float:left; width:100%; height:24px; line-height:28px; margin-top:2px; font-size:12px; font-weight:bold; font-family:Verdana, Arial, sans-serif; color:#fff; text-align:left; }
+.blcg_title {
+    float:left;
+    width:100%;
+    height:24px;
+    line-height:28px;
+    margin-top:2px;
+    font-family:Verdana, Arial, sans-serif;
+    font-size:12px;
+    font-weight:bold;
+    color:#fff;
+    text-align:left;
+}
 
 .blcg_content { overflow:auto; font-size:12px; background:#fff; }
 .blcg_content,
@@ -275,7 +375,9 @@ div.blcg-collapseable a.open { background:url(images/collapse_arrow_up.png) 100%
 #sales_order_grid .grid .order-tables tr.headings,
 #sales_invoice_grid .grid .order-tables tr.headings,
 #sales_shipment_grid .grid .order-tables tr.headings,
-#sales_creditmemo_grid .grid .order-tables tr.headings { background:url(../../images/sort_row_bg.gif) repeat-x scroll 0 50% transparent !important; }
+#sales_creditmemo_grid .grid .order-tables tr.headings {
+    background:url(../../images/sort_row_bg.gif) repeat-x scroll 0 50% transparent !important;
+}
 
 #customgrid_global.config .note { width:100%; min-width:268px; }
 #customgrid_rewriters_file.config .comment span { font-family:Courier New,Courier,Arial,Helvetica,sans-serif; }
