fixed and improved profiles bar display (not broken anymore with small screen size and/or a big number of profiles + compatible with IE8)

--- a/app/design/adminhtml/default/default/template/bl/customgrid/widget/grid/config.phtml
+++ b/app/design/adminhtml/default/default/template/bl/customgrid/widget/grid/config.phtml
@@ -17,7 +17,11 @@
 <?php $_gridModel = $this->getGridModel() ?>
     <div id="<?php echo $this->getHtmlId() ?>-profiles-bar" class="blcg-grid-profiles-bar">
         <div class="blcg-grid-profiles-list-wrapper">
-            <ul class="blcg-grid-profiles-list"></ul>
+            <div class="blcg-grid-profiles-list-constrainer">
+                <div class="blcg-grid-profiles-list-sub-wrapper">
+                    <ul class="blcg-grid-profiles-list"></ul>
+                </div>
+            </div>
         </div>
         <div class="blcg-grid-profiles-bar-cell">
             <div class="blcg-grid-profiles-list-options blcg-grid-profiles-bar-buttons"></div>
