simple scrollable profiles list

--- a/app/design/adminhtml/default/default/template/bl/customgrid/widget/grid/config.phtml
+++ b/app/design/adminhtml/default/default/template/bl/customgrid/widget/grid/config.phtml
@@ -19,6 +19,8 @@
         <div class="blcg-grid-profiles-list-wrapper">
             <div class="blcg-grid-profiles-list-constrainer">
                 <div class="blcg-grid-profiles-list-sub-wrapper">
+                    <button type="button" title="<?php echo $this->__('Previous') ?>" class="blcg-grid-profiles-bar-button blcg-grid-profiles-bar-button-previous blcg-no-display"><span><span><?php echo $this->__('Previous') ?></span></span></button>
+                    <button type="button" title="<?php echo $this->__('Next') ?>" class="blcg-grid-profiles-bar-button blcg-grid-profiles-bar-button-next blcg-no-display"><span><span><?php echo $this->__('Next') ?></span></span></button>
                     <ul class="blcg-grid-profiles-list"></ul>
                 </div>
             </div>
