apply changes related to SUPEE-6788 / APPSEC-1034

--- a/app/design/adminhtml/default/default/template/bl/customgrid/grid/profile/switcher.phtml
+++ b/app/design/adminhtml/default/default/template/bl/customgrid/grid/profile/switcher.phtml
@@ -34,7 +34,7 @@ function blcgSwitchProfile(select)
         return true;
     }
     
-    select.value = '<?php echo $this->getCurrentGridProfile()->getId() ?>';
+    select.value = '<?php echo $this->getGridProfile()->getId() ?>';
     return false;
 }
 //]]>
